--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=8082
+spring.datasource.url=jdbc:h2:mem:lolapi
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=pedro
+spring.datasource.password=123
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.show_sql=true
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+#Logs
+logging.level.org.hibernate.SQL
+
+# Hibernate settings
+spring.jpa.show-sql=true
